--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 /* deck */
 
 
-/* fila 120 - columna 80)
+/* fila 120 - columna 80) 
 .carta1 {background-position: 0 0;}
 .carta2 {background-position: -80px 0;} 
 .carta3 {background-position: -160px 0;}
@@ -99,10 +99,10 @@ body {
 /* poker1 */
 
 
-/* fila 124 - columna 79
-.carta1{background-position:    0     0  ; }
+/* fila 124 - columna 79 */
+/* .carta1 { background-position:    0     0  ; }
 .carta2{background-position:  -79px   0  ; }
-.carta3{background-position: -158px   0  ; }
+.carta3{background-position: -158px   0  ; } */
 /*...
 .carta14{background-position:    0    -124px; }
 .carta15{background-position:  -79px  -124px; }
