--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,54 @@ body {
     transform: rotate3d(0, 1, 0, 0deg);
 }
 
+.end-game{
+    display: none;
+    
+    position: absolute;
+    top:0;
+    left:0;
+    height: 100%;
+    width: 100%;
+    z-index:10;
+    background-color: #00000075;
+}
+
+.end-game-container {
+    position: absolute;
+    top:50%;
+    left:50%;
+    margin: auto;
+    width: 330px;
+    transform: translate(-50%,-50%);
+    z-index: 99;
+}
+
+.success, .fail {
+    color: #000;
+    border: 4px solid black;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    
+    display: none;
+}
+
+.success{
+    background-color: rgb(55, 157, 42);
+}
+
+.fail {
+    background-color: rgb(255, 55, 55);
+}
+
+
+.torna-jugar button {
+    background-color: white;
+    border: 2px solid black;
+    border-radius:20px;
+    padding: 12px 26px;
+    font-weight: bold;
+    cursor:pointer;
+}
 
 /* deck */
 
