falta: audio + animacio repartiment cartes

--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,8 @@ body {
 }
 
 .carta {
-    /* width: 80px;     height: 120px; /* deck */
-    /* width: 111px; height: 111px;  /* pokemon */
-    width: 79px;
-    height: 119px;
-    /* poker1 */
     position: absolute;
     -webkit-perspective: 300px;
-    /* Chrome, Safari, Opera  */
     perspective: 300px;
     transition: all 1s;
 }
@@ -35,22 +29,18 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    /* per poder moure la carta */
+    
     transition-property: transform, shadow;
     transition-duration: .5s;
     backface-visibility: hidden;
 }
 
-.darrera {
-    /*background: #999 url(../images/deck.png) 0px -480px; /*cartes DECK*/
-    background: #999 url(../images/poker1.png) 0px -496px;
-    /*cartes POKER1*/
+.joc {
+    display: none;
 }
 
+
 .davant {
-    /*background: #efefef url(../images/deck.png); /*cartes DECK*/
-    background: #999 url(../images/poker1.png);
-    /*cartes POKER1*/
     transform: rotate3d(0, 1, 0, -180deg);
 }
 
@@ -62,25 +52,27 @@ body {
     transform: rotate3d(0, 1, 0, 0deg);
 }
 
+.menu-container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
 .end-game{
     display: none;
-    
+
     position: absolute;
     top:0;
     left:0;
     height: 100%;
     width: 100%;
-    z-index:10;
+    z-index:999;
     background-color: #00000075;
 }
 
-.end-game-container {
-    position: absolute;
-    top:50%;
-    left:50%;
+.end-game-msg-container {
     margin: auto;
     width: 330px;
-    transform: translate(-50%,-50%);
     z-index: 99;
 }
 
@@ -102,61 +94,88 @@ body {
 }
 
 
-.torna-jugar button {
+.tornar-jugar button, .jugar {
+    text-transform: uppercase;
     background-color: white;
     border: 2px solid black;
-    border-radius:20px;
+    border-radius:10px;
     padding: 12px 26px;
     font-weight: bold;
     cursor:pointer;
 }
 
-/* deck */
+.jugar {
+    background: #232 url(../images/table.jpg);
+    color: white;
+}
 
 
-/* fila 120 - columna 80) 
-.carta1 {background-position: 0 0;}
-.carta2 {background-position: -80px 0;} 
-.carta3 {background-position: -160px 0;}
-.carta4 {background-position: -240px 0;}
-.carta5 {background-position: -320px 0;}
-/*...
-.carta14 {background-position: 0 -120;}
-.carta15 {background-position: -80px -120px;}
-.carta16 {background-position: -160px -120px;}
-/*...
-.carta24 {background-position: -800px -120px;}
-.carta25 {background-position: -880px -120px;}
-.carta26 {background-position: -960px -120px;}
-/*...
+.menu {
+    background-color: rgba(255, 255, 255,1);
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 40px 50px 20px 50px;
+    
+    text-align: center;
+}
 
-/* pokemon */
+.menu-container {
+    margin-top: 10px;
+    text-align: left;
+    display: flex;
+    justify-content: space-around;
+    justify-items: center;
+    align-items: center;
+}
+.menu-container div {
+    padding: 2px;
+}
 
+.menu input[type=number] {
+    background: none;
 
-/* fila 111 - columna 111 
-.carta1{background-position:    0       0; }
-.carta2{background-position: -111px     0; }
-.carta3{background-position: -222px     0; }
-.carta4{background-position: -333px     0; }
-.carta5{background-position: -444px     0; }
-.carta6{background-position: -555px     0; }
-.carta7{background-position: -666px     0; }
-.carta8{background-position:   -0    -111px; }
+    padding: 5px 15px 5px 5px;
+    margin-left: 0px;
+    margin-bottom: 20px;
 
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    border-bottom: 1px solid black;
+    box-shadow: none;
 
-/* poker1 */
+}
 
+.center {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
 
-/* fila 124 - columna 79 */
-/* .carta1 { background-position:    0     0  ; }
-.carta2{background-position:  -79px   0  ; }
-.carta3{background-position: -158px   0  ; } */
-/*...
-.carta14{background-position:    0    -124px; }
-.carta15{background-position:  -79px  -124px; }
-.carta16{background-position:  -158px -124px; }
-/*...
-.carta39{background-position:    -948px -248px; }
-/*...
-.carta40{background-position:    0   -372px; }
-/*...*/
+.triar-carta {
+    margin:10px;
+    position: relative !important;
+}
+.cartes-radio {
+    margin-bottom: 5px;
+}
+.cartes-holder {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.cartes-menu {
+    margin-bottom: 40px;
+}
+
+.fix{
+    border-radius: 15px;
+    box-shadow: 0px 0px 20px 5px #397d02;
+}
+
+input[type=radio] {
+    width: 1.5em;
+    height: 1.5em;
+}
