--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     color: #4A4A4A;
 }
 
+
 #tauler {
     border-radius: 10px;
     border: 1px solid #666;
@@ -12,6 +13,7 @@ body {
     margin: 0 auto;
     box-shadow: 0 -1px 0 #999, 0 1px 0 #999, inset 0;
 }
+
 
 .carta {
     position: absolute;
@@ -93,6 +95,28 @@ body {
     background-color: rgb(255, 55, 55);
 }
 
+footer {
+    margin-top: 30px;
+    
+}
+footer>*{
+    text-align: center !important;
+}
+footer.joc h3 {
+    display: inline;
+    margin: 20px;
+}
+
+#seconds{
+    padding: 10px;
+    background: #232 url(../images/table.jpg);
+    color:white;
+    border: 2px solid black;
+    border-radius:10px;
+    max-width: 80px;
+    margin: 0px auto 20px auto;
+    
+}
 
 .tornar-jugar button, .jugar {
     text-transform: uppercase;
@@ -143,8 +167,9 @@ body {
     border-top: none;
     border-bottom: 1px solid black;
     box-shadow: none;
-
 }
+
+
 
 .center {
     position: absolute;
@@ -167,7 +192,26 @@ body {
     margin-bottom: 15px;
 }
 .cartes-menu {
-    margin-bottom: 40px;
+    margin-bottom: 10px;
+}
+.timer-menu{
+    margin-bottom: 20px;
+}
+
+.timer-menu label {
+    font-weight: bold;
+    font-size: 1.4em;
+    margin: 0px 7px;
+}
+
+.imp{
+    color: rgb(232, 16, 16) !important;
+}
+.med {
+    color:rgb(221, 144, 0) !important;
+}
+.easy {
+    color:#397d02 !important;
 }
 
 .fix{
@@ -178,4 +222,95 @@ body {
 input[type=radio] {
     width: 1.5em;
     height: 1.5em;
+}
+
+
+.theme-changer{
+    position: absolute;
+    top:4%;
+    right:2%;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(65, 65, 65);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider:before {
+    background-color: rgb(65, 65, 65);
+}
+
+
+input:checked + .slider {
+    background-color: #ffffff;
+}
+
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #c9c9c9;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
+/* Dark theme */
+
+.dark {
+    color: white;
+    background: url("../images/wave.jpg");
+
+}
+.dark input {
+    color: white !important;
+}
+
+.dark .menu {
+    background-color: #343434 !important;
+}
+
+.dark * {
+    border-color:white !important;
 }
